--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -20,7 +20,8 @@
                     class="form-control"
                     ngModel
                     name="amount"
-                    required>
+                    required
+                    pattern="^[1-9]+[0-9]*$">
                 </div>
             </div>
             <div class="row">
