--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,8 @@
             <li class="dropdown" appDropdown>
                 <a style="cursor: pointer;" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a style="cursor: pointer;">Save Data</a></li>
-                    <li><a style="cursor: pointer;">Fetch Data</a></li>
+                    <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+                    <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
                 </ul>
             </li>
         </ul>
