Fetchin Data and Using Token

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -16,7 +16,8 @@
                     ngModel
                     name="email"
                     required
-                    email>
+                    email
+                    >
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
