--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,9 +1,14 @@
+<ng-template appPlaceholder></ng-template>
 <div class="row">
     <div class="col-xs-12 col-md-6 col-offset-3">
         <!-- <div class="alert alert-danger" *ngIf="error">
             <p>{{ error }}</p>
         </div> -->
-        <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert>
+        <!-- <app-alert 
+            [message]="error" 
+            *ngIf="error" 
+            (close)="onHandleError()">
+        </app-alert> -->
         <div *ngIf="isLoading" style="text-align: center;">
             <app-loading-spinner></app-loading-spinner>
         </div>
